package dev.kaldiroglu.hexagonal.ayvalikbank.domain.model;

public enum AccountType {
    CHECKING,
    SAVINGS,
    TIME_DEPOSIT
}
