package dev.kaldiroglu.hexagonal.ayvalikbank.domain.port.out;

import dev.kaldiroglu.hexagonal.ayvalikbank.domain.model.Account;
import dev.kaldiroglu.hexagonal.ayvalikbank.domain.model.AccountId;
import dev.kaldiroglu.hexagonal.ayvalikbank.domain.model.CustomerId;

import java.util.List;
import java.util.Optional;

public interface AccountRepositoryPort {
    Account save(Account account);
    Optional<Account> findById(AccountId id);
    List<Account> findByOwnerId(CustomerId ownerId);
    boolean existsById(AccountId id);
}
